# imgui-rs-template

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: boilerplate_glium.rs  boilerplate_glow.rs  boilerplate_sdl2.rs  main.rs
