[package]
name = "imgui-rs-template"
version = "0.1.0"
edition = "2021"

[dependencies]
imgui = { version = "0.12.0" }
glow = "0.13.1"
memoffset = "0.9"
glutin = "0.31.1"
glutin-winit = "0.4.2"
imgui-winit-support = "0.12.0"
imgui-glow-renderer = "0.12.0"
image = "0.23"
raw-window-handle = "0.5.0"
winit = { version = "0.29.3", features = ["rwh_05"] }