[package]
name = "imgui-rs-template"
version = "0.1.0"
edition = "2021"

[dependencies]
imgui = { version = "0.12.0" }
glow = "0.13.1"
glutin = "0.31.1"
glutin-winit = "0.4.2"
imgui-winit-support = "0.12.0"
imgui-glow-renderer = "0.12.0"
imgui-glium-renderer = "0.12.0"
imgui-sdl2-support = "0.12.0"
glium = { version = "0.34.0", default-features = false, features = ["glutin_backend"] }
raw-window-handle = "0.5.0"
winit = { version = "0.29.3", features = ["rwh_05"] }
sdl2 = { version = "0.34.5", features = ["bundled", "static-link"] }